# chain_lit_bot_model

./: README.md  pyproject.toml  requirements.txt
full_bot/: __init__.py  app.py  chainlit.md  chainlit.yaml
