[project]
name = "full-bot"
version = "0.1.0"
description = "A simple bot which works in comparison to ChatGPT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.13",
]

[project.scripts]
full-bot = "full_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["full_bot"]

# Interface settings
[tool.ui]
name = "Chainlit Chatbot"
description = "A simple Question Answering Stateful chatbot with GitHub authentication built with Python, UV, and Chainlit."

# Message settings
[tool.ui.messages]
default_expand = true

# Auth settings
[tool.auth]
required = true
providers = ["github"]

# OAuth Configuration
[tool.oauth_providers.github]
client_id = "${OAUTH_GITHUB_CLIENT_ID}"
client_secret = "${OAUTH_GITHUB_CLIENT_SECRET}"
